--- a/ArtifexGen/requirements.txt
+++ b/ArtifexGen/requirements.txt
@@ -9,7 +9,7 @@ filelock==3.12.4
 Flask==3.0.0
 fonttools==4.43.0
 fsspec==2023.9.2
-huggingface-hub==0.17.3
+huggingface-hub==0.16.4
 idna==3.4
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
@@ -22,6 +22,7 @@ networkx==3.1
 numpy==1.26.0
 packaging==23.2
 Pillow==10.0.1
+psutil==5.9.5
 pyparsing==3.1.1
 python-dateutil==2.8.2
 PyYAML==6.0.1
@@ -30,8 +31,10 @@ requests==2.31.0
 safetensors==0.3.3
 six==1.16.0
 sympy==1.12
+tokenizers==0.14.0
 torch==2.1.0
 tqdm==4.66.1
+transformers==4.34.0
 typing_extensions==4.8.0
 urllib3==2.0.6
 Werkzeug==3.0.0
